[gd_scene load_steps=2 format=3 uid="uid://bbik38nrtmm07"]

[ext_resource type="Script" path="res://Scripts/upgrade_menu.gd" id="1_hexv2"]

[node name="UpgradeMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hexv2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -490.0
offset_top = -431.0
offset_right = 490.0
offset_bottom = 431.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.635294, 0.6, 0.478431)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 474.0
offset_top = 106.0
offset_right = 1448.0
offset_bottom = 971.0

[node name="UpgradeButton1" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.234
anchor_top = 0.301
anchor_right = 0.234
anchor_bottom = 0.301
offset_left = 198.72
offset_top = -96.08
offset_right = 788.72
offset_bottom = 65.92
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeTitle1" type="Label" parent="UpgradeButton1"]
layout_mode = 0
offset_left = 31.0
offset_top = 28.0
offset_right = 260.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "First Upgrade Title"

[node name="UpgradeDescription1" type="Label" parent="UpgradeButton1"]
layout_mode = 0
offset_left = 62.0
offset_top = 89.0
offset_right = 322.0
offset_bottom = 125.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Description of ability for this power."

[node name="UpgradeButton2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.234
anchor_top = 0.301
anchor_right = 0.234
anchor_bottom = 0.301
offset_left = 200.72
offset_top = 133.92
offset_right = 790.72
offset_bottom = 295.92
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeTitle2" type="Label" parent="UpgradeButton2"]
layout_mode = 0
offset_left = 31.0
offset_top = 28.0
offset_right = 260.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Second Upgrade Title"

[node name="UpgradeDescription2" type="Label" parent="UpgradeButton2"]
layout_mode = 0
offset_left = 62.0
offset_top = 89.0
offset_right = 322.0
offset_bottom = 125.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Description of ability for this power."

[node name="UpgradeButton3" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.234
anchor_top = 0.301
anchor_right = 0.234
anchor_bottom = 0.301
offset_left = 200.72
offset_top = 372.92
offset_right = 790.72
offset_bottom = 534.92
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeTitle3" type="Label" parent="UpgradeButton3"]
layout_mode = 1
anchors_preset = -1
offset_left = 31.0
offset_top = 28.0
offset_right = 260.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Third Upgrade Title"

[node name="UpgradeDescription3" type="Label" parent="UpgradeButton3"]
layout_mode = 0
offset_left = 62.0
offset_top = 89.0
offset_right = 322.0
offset_bottom = 125.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Description of ability for this power."

[connection signal="pressed" from="UpgradeButton1" to="." method="_on_upgrade_button_1_pressed"]
[connection signal="pressed" from="UpgradeButton2" to="." method="_on_upgrade_button_2_pressed"]
[connection signal="pressed" from="UpgradeButton3" to="." method="_on_upgrade_button_3_pressed"]
